--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ body {
 }
 
 .header-logo {
+  color: #2e2f42;
   font-family: Raleway;
   font-size: 18px;
   font-weight: 700;
@@ -17,6 +18,7 @@ body {
 }
 
 .header-menu-item {
+  color: #2e2f42;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
@@ -25,6 +27,7 @@ body {
 }
 
 .address-list-item {
+  color: #434455;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -133,6 +136,7 @@ body {
 }
 
 .footer-text {
+  color: #f4f4fd;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -142,4 +146,8 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: left;
+}
+
+.header-logo-white {
+  color: #f4f4fd;
 }
