--- a/css/style.css
+++ b/css/style.css
@@ -25,14 +25,14 @@ body {
   text-align: left;
 }
 
-.header-menu-item {
+/* .header-menu-item {
   color: #2e2f42;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: left;
-}
+} */
 
 .header-menu-link {
   color: #2e2f42;
