--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Roboto", sans-serif, "Raleway", sans-serif;
+  font-family: "Roboto", sans-serif;
   color: #434455;
   background-color: #ffffff;
 }
@@ -77,7 +77,7 @@ body {
   color: #ffffff;
   font-size: 56px;
   font-weight: 700;
-  line-height: 1.7;
+  line-height: 1.07;
   letter-spacing: 0.02em;
   text-align: center;
 }
@@ -85,11 +85,20 @@ body {
 .section-order-button {
   color: #ffffff;
   background-color: #4d5ae5;
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
   text-align: left;
+}
+
+.section-order-button:hover {
+  background-color: #404bbf;
+}
+
+.section-order-button:focus {
+  background-color: #404bbf;
 }
 
 .goals-list-title {
@@ -110,16 +119,21 @@ body {
 }
 
 .title {
+  text-transform: capitalize;
   color: #2e2f42;
   font-size: 36px;
   font-weight: 700;
-  line-height: 1.1;
+  line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
 }
 
 .team {
   background-color: #f4f4fd;
+}
+
+.team-list-item {
+  background-color: #ffffff;
 }
 
 .team-people-name {
